# gl-transient-forest

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  ecosystem.config.cjs  fluxbox-apps.txt  fluxbox-menu.txt  fluxbox-startup.sh
.devcontainer/hooks/: onCreate.sh  postAttach.sh  postCreate.sh  postStart.sh  updateContent.sh
.devcontainer/patches/: autosave.patch
.github/workflows/: level_publish.yml  template_publish.yml
.internal/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.internal/scripts/: discord.py  import_assets_key.sh  make_upgrade_patch.sh  reset.py  spindle.py  upgrade.py
.internal/spindler/: .gitignore  README.md  pyproject.toml
.internal/spindler/spindler/: __init__.py  construct.py  parser.py
.internal/spindler/spindler/grammars/: sugarcube.lark  twee.lark
.internal/spindler/spindler/templates/: code.j2
.internal/spindler/spindler/types/: passage.py
.internal/src/: constants.ts  iframe.ts
assemblyscript/: .gitignore
docs/: License.md
level/: licenses.md
level/code/: card.ts  dialogue.ts  exits.ts  frog.ts  main.ts  markers.ts  pickups.ts  strings.ts  tsconfig.json
level/story/: Level.twee
level/tiled/: Bridge_Tiles.tsj  Fish.tsj  Frog Idle.tsj  Frog Jump.tsj  Frog.tsj  Items.tsj  Knight.tsj  Master.tsj  Misc.tsj  Plants.tsj  Rocks.tsj  Spirit.tsj  Spring Forest - Cliff Tiles.tsj  (+12 more)
scripts/: discord.py  reset.py  spindle.py  upgrade.py
src/: constants.ts  log.ts  shell.tsx  vite-env.d.ts
(+100 files in other folders)
