[tool.poetry]
name = "spindler"
version = "0.1.0"
description = ""
authors = ["Andrew Moffat <arwmoffat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.2.2"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
spindler = "spindler:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^7.3.1"
mypy = "^1.15.0"
flake8 = "^7.1.2"
munch = "^4.0.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
